# pytorch_template

./: .gitignore  README.md  dev.sh  pyproject.toml  setup_environment.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/: nvidia_cuda_example.py
verify_setup/: gpu_info.py  health_check.py  verify_gpu.py  verify_libs.py  verify_python.py  verify_torch.py
